--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,10 +37,10 @@
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
 		<div class="filter-container">
-			<button class="btnSort" id="tous">Tous</button>
-			<button class="btnSort" id="objets">Objets</button>
-			<button class="btnSort" id="appartements">Appartements</button>
-			<button class="btnSort" id="hotels-restaurants">Hôtels & restaurants</button>
+			<button class="btn-Sort" id="0">Tous</button>
+			<button class="btn-Sort" id="1">Objets</button>
+			<button class="btn-Sort" id="2">Appartements</button>
+			<button class="btn-Sort" id="3">Hôtels & restaurants</button>
 		</div>
 		<div class="gallery">
 				<!-- script.js  -->
