--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -27,10 +27,10 @@
 	<section id="introduction">
 		<figure>
 			<img src="./assets/images/sophie-bluel.png" alt="">
-			<a href="#modal1" id=click-modal1 class="js-modal"><i class="fa-light fa-pen-to-square"></i>modifier</a>
+			<a href="#modal1" id=click-modal1 class="js-modal"><i class="fa-regular fa-pen-to-square"></i>modifier</a>
 		</figure>
 		<article>
-			<a href="#modal2" id="click-modal2" class="js-modal"><i class="fa-light fa-pen-to-square"></i>modifier</a>
+			<a href="#modal2" id="click-modal2" class="js-modal"><i class="fa-regular fa-pen-to-square"></i>modifier</a>
 			<h2>Designer d'espace</h2>
 			<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
 			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
@@ -40,52 +40,59 @@
 	<section id="portfolio">
 		<div class="h2-edit">
 			<h2>Mes Projets</h2>
-		<!-- MODALE -->
-			<a href="#modal3" id="click-modal3" class="js-modal"><i class="fa-light fa-pen-to-square"></i>modifier</a>
+			<a href="#modal3" id="click-modal3" class="js-modal"><i class="fa-regular fa-pen-to-square"></i>modifier</a>
 		</div>
-		<!-- MODALE VUE1 -->
+		<!-- MODALE -->
     	<aside id="modal3" class="modal" aria-hidden="true" role="dialog" aria-modal="false" aria-labelledby="titlemodal" style="display:none">
-			<div class="modal-wrapper js-modal-stop">
-				<button class="js-modal-close"><i class="fa-thin fa-pen-to-square"></i></button>
-            	<h1 id="titlemodal">Galerie photo</h1>
-            	<div class="modal-gallery" data-draggable="target">
-            	</div>
-            	<a href="#vue2"><input id="add-btn" type="submit" value="Ajouter une photo"></a><br>
-            	<a href="#" id="delete-gallery">Supprimer la galerie</a>
-        	</div>
-    	</aside>
-		<!-- MODALE VUE2 -->
-		<aside id="vue2" class="modal" aria-hidden="true" role="dialog" aria-modal="false" aria-labelledby="titlemodal">
-			<div class="modal-wrapper js-modal-stop">
+			<div class='modal-wrapper js-modal-stop'>
 				<button class="js-modal-previous"><i class="fa-light fa-arrow-left-long"></i></button>
 				<button class="js-modal-close"><i class="fa-thin fa-pen-to-square"></i></button>
-				<h1 id="titlemodal">Ajout photo</h1>
+				<div class="app">
+					<h1 class="titlemodal"></h1>
+					<div class='content'></div>
+					<div class="btn-container"></div>
+				</div>
+			</div>
+			
+			
+			<!-- <div class="modal-wrapper js-modal-stop" id="vue1"aria-hidden="true" role="dialog" aria-modal="false" aria-labelledby="titlemodal" style="display:none">
+				<button class="js-modal-close"><i class="fa-sharp fa-solid fa-xmark-large"></i></button>
+            	<h1 class="titlemodal">Galerie photo</h1>
+            	<div class="modal-gallery" data-draggable="target">
+            	</div>
+				<div class="flex">
+					<a href="#vue2" class="js-modal" id="add-btn">Ajouter une photo</a>
+					<a href="#" id="delete-gallery">Supprimer la galerie</a>
+				</div>
+        	</div>
+			<div class="modal-wrapper js-modal-stop" id="vue2" aria-hidden="true" role="dialog" aria-modal="false" aria-labelledby="titlemodal" style="display:none">
+				<button class="js-modal-previous"><i class="fa-sharp fa-solid fa-arrow-left-long"></i></button>
+				<button class="js-modal-close"><i class="fa-sharp fa-solid fa-xmark-large"></i></button>
+				<h1 class="titlemodal">Ajout photo</h1>
 				<div class="pic-add">
 					<i class="fa-thin fa-image"></i>
 					<button>+ Ajouter photo</button>
 					<p>jpg, png: 4mo max</p>
 				</div>
 				<form id="add-form" action="#" method="post">
-				<label for="title">Titre</label>
-				<input type="title" name="title" id="title">
-				<label for="category">Catégorie</label>
-				<select name="category" id="category">
-					<option value="">--Choisir la catégorie--</option>
-					<option value="1">Objets</option>
-					<option value="2">Appartements</option>
-					<option value="3">Hôtels & restaurants</option>
-				</select>
-				<span></span>
-				<input id="add-picture-btn" type="submit" value="Valider"><br>
-			</div>
-		</aside>
+					<label for="title">Titre</label>
+					<input type="text" name="title" id="title">
+					<label for="category">Catégorie</label>
+					<select name="category" id="category">
+						<option value="">--Choisir la catégorie--</option>
+						<option value="1">Objets</option>
+						<option value="2">Appartements</option>
+						<option value="3">Hôtels & restaurants</option>
+					</select>
+					<span class="line"></span>
+					<input id="add-picture-btn" type="submit" value="Valider"><br>
+				</form>
+			</div> -->
+    	</aside>
 		<!-- END OF THE MODALE -->
 
 		<div class="filter-container">
 			<button class="btn-Sort" id="0">Tous</button>
-			<button class="btn-Sort" id="1">Objets</button>
-			<button class="btn-Sort" id="2">Appartements</button>
-			<button class="btn-Sort" id="3">Hôtels & restaurants</button>
 		</div>
 		<div class="gallery">
 				<!-- script.js  -->
@@ -114,6 +121,6 @@
 	</nav>
 </footer>
 <script src="script.js"></script>
-<script src="/FrontEnd/modal/scriptmodal.js"></script>
+<script src="/FrontEnd/modal/scriptmodalessai.js"></script>
 </body>
 </html>
