--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -45,49 +45,14 @@
 		<!-- MODALE -->
     	<aside id="modal3" class="modal" aria-hidden="true" role="dialog" aria-modal="false" aria-labelledby="titlemodal" style="display:none">
 			<div class='modal-wrapper js-modal-stop'>
-				<button class="js-modal-previous"><i class="fa-light fa-arrow-left-long"></i></button>
-				<button class="js-modal-close"><i class="fa-thin fa-pen-to-square"></i></button>
+				<button class="js-modal-previous"><i class="fa-solid fa-arrow-left-long"></i></button>
+				<button class="js-modal-close"><i class="fa-solid fa-xmark"></i></button>
 				<div class="app">
 					<h1 class="titlemodal"></h1>
 					<div class='content'></div>
 					<div class="btn-container"></div>
 				</div>
 			</div>
-			
-			
-			<!-- <div class="modal-wrapper js-modal-stop" id="vue1"aria-hidden="true" role="dialog" aria-modal="false" aria-labelledby="titlemodal" style="display:none">
-				<button class="js-modal-close"><i class="fa-sharp fa-solid fa-xmark-large"></i></button>
-            	<h1 class="titlemodal">Galerie photo</h1>
-            	<div class="modal-gallery" data-draggable="target">
-            	</div>
-				<div class="flex">
-					<a href="#vue2" class="js-modal" id="add-btn">Ajouter une photo</a>
-					<a href="#" id="delete-gallery">Supprimer la galerie</a>
-				</div>
-        	</div>
-			<div class="modal-wrapper js-modal-stop" id="vue2" aria-hidden="true" role="dialog" aria-modal="false" aria-labelledby="titlemodal" style="display:none">
-				<button class="js-modal-previous"><i class="fa-sharp fa-solid fa-arrow-left-long"></i></button>
-				<button class="js-modal-close"><i class="fa-sharp fa-solid fa-xmark-large"></i></button>
-				<h1 class="titlemodal">Ajout photo</h1>
-				<div class="pic-add">
-					<i class="fa-thin fa-image"></i>
-					<button>+ Ajouter photo</button>
-					<p>jpg, png: 4mo max</p>
-				</div>
-				<form id="add-form" action="#" method="post">
-					<label for="title">Titre</label>
-					<input type="text" name="title" id="title">
-					<label for="category">Catégorie</label>
-					<select name="category" id="category">
-						<option value="">--Choisir la catégorie--</option>
-						<option value="1">Objets</option>
-						<option value="2">Appartements</option>
-						<option value="3">Hôtels & restaurants</option>
-					</select>
-					<span class="line"></span>
-					<input id="add-picture-btn" type="submit" value="Valider"><br>
-				</form>
-			</div> -->
     	</aside>
 		<!-- END OF THE MODALE -->
 
