--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -86,6 +86,7 @@
 	</nav>
 </footer>
 <script src="script.js"></script>
+<script src="login.js"></script>
 <script src="/FrontEnd/modal/scriptmodalessai.js"></script>
 </body>
 </html>
