--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -27,10 +27,10 @@
 	<section id="introduction">
 		<figure>
 			<img src="./assets/images/sophie-bluel.png" alt="">
-			<a href="#modal1" id=click-modal1 class="js-modal"><i class="fa-regular fa-pen-to-square"></i>modifier</a>
+			<a href="#modal1" id=click-modal1 class="js-modal" style="visibility:hidden"><i class="fa-regular fa-pen-to-square"></i>modifier</a>
 		</figure>
 		<article>
-			<a href="#modal2" id="click-modal2" class="js-modal"><i class="fa-regular fa-pen-to-square"></i>modifier</a>
+			<a href="#modal2" id="click-modal2" class="js-modal" style="visibility:hidden"><i class="fa-regular fa-pen-to-square"></i>modifier</a>
 			<h2>Designer d'espace</h2>
 			<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
 			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
@@ -40,7 +40,7 @@
 	<section id="portfolio">
 		<div class="h2-edit">
 			<h2>Mes Projets</h2>
-			<a href="#modal3" id="click-modal3" class="js-modal"><i class="fa-regular fa-pen-to-square"></i>modifier</a>
+			<a href="#modal3" id="click-modal3" class="js-modal" style="visibility:hidden"><i class="fa-regular fa-pen-to-square"></i>modifier</a>
 		</div>
 		<!-- MODALE -->
     	<aside id="modal3" class="modal" aria-hidden="true" role="dialog" aria-modal="false" aria-labelledby="titlemodal" style="display:none">
