Réorganisation modal.js

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -87,6 +87,6 @@
 </footer>
 <script src="script.js"></script>
 <script src="login.js"></script>
-<script src="/FrontEnd/modal/scriptmodalessai.js"></script>
+<script src="modal.js"></script>
 </body>
 </html>
