--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -85,6 +85,7 @@
 		</ul>
 	</nav>
 </footer>
+<!-- <script src="script.js"></script> -->
 <script src="script.js"></script>
 <script src="login.js"></script>
 <script src="modal.js"></script>
