#vue1 avec suppression

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -18,7 +18,7 @@
 			<li><a href="index.html#portfolio">projets</a></li>
 			<li><a href="index.html#contact">contact</a></li>
 			<li><a href="./login.html">login</a></li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			<li><a href="https://www.instagram.com/"><img src="./assets/icons/instagram.png" alt="Instagram"></a></li>
 		</ul>
 	</nav>
 </header>
@@ -30,7 +30,7 @@
 			<input type="email" name="email" id="email">
 			<label for="password">Mot de passe</label>
 			<input type="password" name="password" id="password">
-            <input id="login-btn" type="submit" value="Se connecter">
+            <div class="btn-effect"><input id="login-btn" type="submit" value="Se connecter"></div>
             <a href="#">Mot de passe oublié</a>
         </form>
     </section>
