Dynamisme en cas d'ajout et de suppression de projet-s

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -57,7 +57,7 @@
 		<!-- END OF THE MODALE -->
 
 		<div class="filter-container">
-			<button class="btn-Sort" id="0">Tous</button>
+			<button class="btn-Sort" id="cat-0">Tous</button>
 		</div>
 		<div class="gallery">
 				<!-- script.js  -->
@@ -87,6 +87,6 @@
 </footer>
 <script src="script.js"></script>
 <script src="login.js"></script>
-<script src="modal.js"></script>
+<script type="module" src="modal.js"></script>
 </body>
 </html>
