--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
-	<title>Sophie Bluel - Architecte d'intérieur</title>
+	<title>Sophie&nbsp;Bluel&nbsp;-&nbsp;Architecte&nbsp;d'intérieur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,12 +43,12 @@
 			<a href="#modal3" id="click-modal3" class="js-modal" style="visibility:hidden"><i class="fa-regular fa-pen-to-square"></i>modifier</a>
 		</div>
 		<!-- MODALE -->
-    	<aside id="modal3" class="modal" aria-hidden="true" role="dialog" aria-modal="false" aria-labelledby="titlemodal" style="display:none">
+    	<aside id="modal3" class="modal" aria-hidden="true" style="display:none">
 			<div class='modal-wrapper js-modal-stop'>
 				<button class="js-modal-previous"><i class="fa-solid fa-arrow-left-long"></i></button>
 				<button class="js-modal-close"><i class="fa-solid fa-xmark"></i></button>
 				<div class="app">
-					<h1 class="titlemodal"></h1>
+					<h2 class="titlemodal"></h2>
 					<div class='content'></div>
 					<div class="btn-container"></div>
 				</div>
