--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<script src="https://kit.fontawesome.com/50b6dc59cc.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/prefixed/style.css">
 </head>
 <body>
 <header>
