--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 	<link rel="stylesheet" href="./assets/prefixed/style.css">
 </head>
 <body>
+	<div id="banner" style="display:none">
+		<p><i class="fa-regular fa-pen-to-square"></i>Mode édition</p>
+		<button>publier les changements</button>
+	</div>
 <header>
 	<a href="./index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
 	<nav>
 		<ul>
 			<li><a href="#portfolio">projets</a></li>
 			<li><a href="#contact">contact</a></li>
-			<li><a href="./login.html">login</a></li>
+			<li><a href="./login.html" id="login">login</a><a href="#logout" id="logout" style="display:none">logout</a></li>
 			<li><a href="https://www.instagram.com/"><img src="./assets/icons/instagram.png" alt="Instagram"></a></li>
 		</ul>
 	</nav>
